# Clickomania-Game

./: README.md  pyproject.toml
src/clickomania/: __init__.py  __main__.py  core.py  main.py  ui.py
tests/: test_core.py
